Opened 19 years ago

Closed 19 years ago

Last modified 19 years ago

#205 closed bug (fixed)

Selected items in Tracker have wrong icon color

Reported by: diver Owned by: axeld
Priority: normal Milestone: R1
Component: - General Version:
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

When selecting items in Tracker (files or folders) they icons became wrong color comparing to R5, something wrong with color convertion.

Change History (3)

comment:1 by mmlr, 19 years ago

Fixed in hrev16951.

comment:2 by mmlr, 19 years ago

Resolution: fixed

comment:3 by mmlr, 19 years ago

Status: newclosed
Note: See TracTickets for help on using tickets.