This should fix the wrong colors for selected Tracker icons. Fixes bug #205.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@16951 a95241bf-73f2-0310-859d-f6bbb57e9c96